syntax = "proto3";

package data_fs;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option go_package = "data_fs";

import "photo.proto";
import "video.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = true;

message PhotoProfile {
  option (gogoproto.goproto_sizecache) = false;
  option (gogoproto.goproto_unkeyed) = false;
  option (gogoproto.goproto_unrecognized) = false;

  PhotoDetail photo = 1 [(gogoproto.moretags) = "bson:\"photo\""];
  VideoDetail video = 2 [(gogoproto.moretags) = "bson:\"video\""];
}